
   * Re-use file properties on branch root more efficiently. This made 
     the cache of branch properties unnecessary.

   * Avoid using copy in several places.

   * Add new ``log-strip-trailing-newline'' option which removes 
     the last trailing newline from the log message when pushing 
	 to Subversion. This feature is only available for the 
	 experimental mappings. (#189227)

  BUGS
  
   * Fix compatibility with bzr 1.3.

   * Be a bit quieter with messages about experimental mappings. (#162496)

   * More correct implementation of Repository.get_ancestry(). 

   * Properly use current branching scheme when following branches. (#183361)

   * Avoid using special characters in branching scheme names because it 
     breaks over http/https. (#204759). 

  INTERNALS

   * Allow multiple mappings to be available at the same time.

   * Branching from a Subversion repository will now fetch right-hand side 
     parents as well as left hand side (mainline) parents, if specified.

  DOCUMENTATION

   * Add note about svn+ prefix to authentication question.

bzr-svn 0.4.8	2008-03-21

  BUG FIXES

   * Fix compatibility with Bazaar 1.2. (#196002)

   * Don't provide find_repository() implementation. (#193814)

   * Allow specifying path inside repository in svn-branching-scheme. (#190331)

   * Support using platform-specific auth providers when available.

   * Fix path to URL conversion for Windows NT. (#188233)

   * Fix performance regression in sqlite queries.

  FEATURES

   * Add progress bar to fetch initialization code. 

   * Add another progress bar to the branch detection code.

   * Add -d option to the svn-push command. 

bzr-svn 0.4.7	2008-02-01
 
  FEATURES

   * Implement Repository.find_branches(). (#178108)

   * Warn about location when initializing Subversion repository cache.

  BUGS

   * Fix opening unicode file names during fetch. (#162368)

   * Consistently handle unicode characters. (#129334, #164381)
