@@ -513,11 +513,14 @@ class SvnCommitBuilder(RootCommitBuilder):
                (self.revision_metadata.revision, self.revision_metadata.author, 
                    self.revision_metadata.date, revid))
 
-        if self.repository.get_config().get_override_svn_revprops():
-            set_svn_revprops(self.repository.transport, 
-                 self.revision_metadata.revision, {
-                svn.core.SVN_PROP_REVISION_AUTHOR: self._committer,
-                svn.core.SVN_PROP_REVISION_DATE: svn_time_to_cstring(1000000*self._timestamp)})
+        override_svn_revprops = self.repository.get_config().get_override_svn_revprops()
+        if override_svn_revprops is not None:
+            new_revprops = {}
+            if svn.core.SVN_PROP_REVISION_AUTHOR in override_svn_revprops:
+                new_revprops[svn.core.SVN_PROP_REVISION_AUTHOR] = self._committer
+            if svn.core.SVN_PROP_REVISION_DATE in override_svn_revprops:
+                new_revprops[svn.core.SVN_PROP_REVISION_DATE] = svn_time_to_cstring(1000000*self._timestamp)
+            set_svn_revprops(self.repository.transport, self.revision_metadata.revision, new_revprops)
 
         try:
             set_svn_revprops(self.repository.transport, self.revision_metadata.revision, 
